# xmrig2xdag

./: .gitignore  README.md
clib/: .gitignore  CMakeLists.txt  readme.md  wrapper.cpp  wrapper.h
proxy/: director.go  job.go  mining.go  proxy.go  share.go
server/: config.json  go.mod  go.sum  main.go  server.key  server.pem
server/base58/: base58_test.go  base58bench_test.go  base58check.go  base58check_test.go  example_test.go
server/config/: config.go
server/logger/: logger.go
server/proxy/: detect.go  director.go  job.go  mining.go  proxy.go  share.go  uniuri.go
server/stratum/: codec.go  server.go
server/tcp/: server.go  worker.go
server/utils/: safemap.go
server/xdag/: block.go  block_test.go  connect.go  crypto.go  time.go
tcp/: worker.go
